--- a/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
+++ b/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
@@ -12,6 +12,8 @@
     <h1>Ini untuk tugas praktikum GUT</h1>
 
     <p>ini punyanya master branches</p>
+    
+    <p>ini punyanya devloper branches</p>
 </body>
 
 </html>
