--- a/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
+++ b/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
 </head>
 
 <body>
@@ -14,6 +29,8 @@
     <p>ini punyanya master branches</p>
     
     <p>ini punyanya devloper branches</p>
+    
+    <p>nambah CSS internal</p>
 </body>
 
 </html>
