--- a/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
+++ b/02_Version Control and Branch Management (Git)/praktikum/PraktikumGIT.html
@@ -31,6 +31,9 @@ p {
     <p>ini punyanya devloper branches</p>
     
     <p>nambah CSS internal</p>
+    
+    <p style="color:red;">ini CSS inline</p>
+
 </body>
 
 </html>
