--- a/06_CSS/praktikum/file2.html.html
+++ b/06_CSS/praktikum/file2.html.html
@@ -23,28 +23,28 @@
     </div>
   </header>
 
-  <div id="form-container" class="draf">
+  <div class="draf">
     <h1 style="color:	#008CBA;">Lorem Post 1</h1>
     <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri
       ex, et pri cicant eirmod deserunt, Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint,
       nam in minim voluptiabus. Etiam placerat eam in</p>
   </div>
 
-  <div id="form-container" class="draf">
+  <div class="draf">
     <h1 style="color:	#008CBA;">Lorem Post 2</h1>
     <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri
       ex, et pri cicant eirmod deserunt, Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint,
       nam in minim voluptiabus. Etiam placerat eam in</p>
   </div>
 
-  <div id="form-container" class="draf">
+  <div class="draf">
     <h1 style="color:	#008CBA;">Lorem Post 3</h1>
     <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri
       ex, et pri cicant eirmod deserunt, Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint,
       nam in minim voluptiabus. Etiam placerat eam in</p>
   </div>
 
-  <div id="form-container" class="draf">
+  <div class="draf">
     <h1 style="color:	#008CBA;">Lorem Post 4</h1>
     <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri
       ex, et pri cicant eirmod deserunt, Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint,
