--- a/06_CSS/praktikum/file1.html.html
+++ b/06_CSS/praktikum/file1.html.html
@@ -3,12 +3,19 @@
 
 <head>
     <meta charset="UTF-8" />
+    <me<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>file1</title>
     <style>
         .float-container {
             padding: 10px;
+            font-size: 20px;
+            font-family: 'Slabo 27px';
         }
 
         .float-div1 {
@@ -46,18 +53,25 @@
     <div class="float-container">
 
         <div class="float-div1">
-            <div class="red">Saya adalah box red berukuran 100px</div>
+            <div class="red">
+                <p>Saya adalah box red berukuran 100px</p>
+            </div>
         </div>
 
         <div class="float-div1">
-            <div class="blue">Saya adalah box blue berukuran 100px</div>
+            <div class="blue">
+                <P>Saya adalah box blue berukuran 100px</P>
+            </div>
         </div>
+
         <br><br>
+
         <div style="flex-grow: 1; margin: 100px; margin-left: 0rem;">
             <div class="green">
                 <p>Saya adalah box green berukuran 350px</p>
             </div>
         </div>
+
     </div>
 
 
